[package]
name = "minerva"
version = "0.9.14"
authors = ["Patton Doyle <patton@DecodeDetroit.com>"]
description = "Interactive Show Control Software"
license = "GPL-3.0-or-later"
edition="2021"

[profile.release]
lto = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fnv = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
redis = "0.24"
serial = "0.4"
byteorder = "1.4"
zmq = { version = "0.10", optional = true }
tokio = { version = "1.33", features = ["macros", "process", "rt-multi-thread", "time"] }
warp = { version = "0.3", features = ["tls"] }
async-stream = "0.3"
async-recursion = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
reqwest = { version = "0.11", default-features=false, features = ["blocking", "json"] }
thread_local = "1.1"
sysinfo = "0.30"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
rust-embed = "8.1"
warp-embed = { git = "https://github.com/informationsea/warp-embed.git" }
tokio-serial = "5.4"
jsonwebtoken = "9"

[features]
no_can_limit = []
no_action_recursion = []
zmq-comm = ["zmq"]
