[package]
name = "minerva"
version = "1.0.1"
authors = ["Patton Doyle <patton@DecodeDetroit.com>"]
description = "Interactive Show Control Software"
license = "GPL-3.0-or-later"
edition="2021"

[profile.release]
lto = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fnv = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
serde_json = "1.0"
redis = "0.32"
serial = "0.4"
byteorder = "1.5"
zmq = "0.10"
tokio = { version = "1.44", features = ["macros", "process", "rt-multi-thread", "time", "io-util"] }
warp = { version = "0.3", features = ["tls"] }
async-stream = "0.3"
async-recursion = "1.1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
reqwest = { version = "0.12", default-features=false, features = ["blocking", "json"] }
thread_local = "1.1"
single-instance = "0.3"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rust-embed = "8.7"
warp-embed = "0.5"
tokio-serial = "5.4"
bytes = "1.10"
jsonwebtoken = "9.3"
console-subscriber = { version = "0.4", optional = true }

[features]
no_can_limit = []
no_action_recursion = []
tokio_console = ["console-subscriber"]
